--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="ui borderless topmenu menu">
 
-  <div class="left item tab-left">
+  <div class="left item tab left">
     <a class="fitted item">
       <i class="facebook f icon"></i>
     </a>
@@ -32,7 +32,7 @@
     </a>
   </div>
 
-  <div class="right item tab-right">
+  <div class="right item tab right">
     <a class="fitted item">
       <i class="home icon"></i>
     </a>
@@ -56,6 +56,58 @@
   </div>
 
 </div>
+
+<div class="ui center aligned container">
+  <img class="center coug" src="coug.jpg">
+
+  <div class="ui borderless five item menu middle menu">
+
+    <div class="ui dropdown item">
+      <div class="text">TEXTBOOKS&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">FIND TEXTBOOKS</div>
+        <div class="item">TEXTBOOK RENTALS</div>
+        <div class="item">SELL BACK TEXTBOOKS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">APPAREL&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">MEN</div>
+        <div class="item">WOMEN</div>
+        <div class="item">KIDS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">GIFTS&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">DIPLOMA FRAMES</div>
+        <div class="item">SCHOOL SPIRIT</div>
+        <div class="item">DRINKWARE</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">COLLECTIONS&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">UNDER ARMOUR</div>
+        <div class="item">NIKE</div>
+        <div class="item">LOGO GEAR</div>
+      </div>
+    </div>
+
+    <a class="item">SEARCH</a>
+
+  </div>
+</div>
+
+<img class="bg image" src="centerimage.jpg">
 
 <script>
   $('.ui.dropdown')
