--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="ui borderless topmenu menu">
 
-  <div class="left item tab left">
+  <div class="left item tab-left">
     <a class="fitted item">
       <i class="facebook f icon"></i>
     </a>
@@ -32,7 +32,7 @@
     </a>
   </div>
 
-  <div class="right item tab right">
+  <div class="right item tab-right">
     <a class="fitted item">
       <i class="home icon"></i>
     </a>
@@ -58,7 +58,8 @@
 </div>
 
 <div class="ui center aligned container">
-  <img class="center coug" src="coug.jpg">
+
+  <img class="center-coug" src="coug.jpg">
 
   <div class="ui borderless five item menu middle menu">
 
@@ -107,7 +108,73 @@
   </div>
 </div>
 
-<img class="bg image" src="centerimage.jpg">
+<img class="bg-image" src="centerimage.jpg">
+
+<div class="black-background footer-padding">
+
+  <div class="grid-padding">
+
+    <div class="ui three column grid">
+      <div class="row">
+        <div class="column">
+          <p><b>NAVIGATION</b></p>
+          <hr>
+          <p><a class="item white"><b>About Us</b></a></p>
+          <p><a class="item white"><b>Videos</b></a></p>
+          <p><a class="item white"><b>Store Locations</b></a></p>
+        </div>
+        <div class="column">
+          <p><b>MAIN MENU</b></p>
+          <hr>
+          <p><a class="item white"><b>Textbooks</b></a></p>
+          <p><a class="item white"><b>Apparel</b></a></p>
+          <p><a class="item white"><b>Gifts</b></a></p>
+        </div>
+        <div class="column">
+          <p><b>CONNECT</b></p>
+          <hr>
+          <form class="ui form">
+            <div class="field">
+              <label style="color:#F0F0F0;">Sign up for the latest updates</label>
+              <input type="text" name="first-name" placeholder="Enter email address" style="width: 250px;">
+              <button class="ui button" type="submit">Join</button>
+            </div>
+
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <div class="ui center aligned one column grid">
+      <div class="row">
+        <div class="column">
+          <hr>
+          <br>
+          <div class="center item">
+            <a class="item footer-sm">
+              <i class="big facebook f icon"></i>
+            </a>
+            <a class="item footer-sm">
+              <i class="big twitter icon"></i>
+            </a>
+            <a class="item footer-sm">
+              <i class="big pinterest icon"></i>
+            </a>
+            <a class="item footer-sm">
+              <i class="big instagram icon"></i>
+            </a>
+          </div>
+          <br>
+          <br>
+          <br>
+          <p><b>COPYRIGHT  &copy  2018 WASHINGTON STATE UNIVERSITY VANCOUVER </b></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
 
 <script>
   $('.ui.dropdown')
@@ -115,5 +182,6 @@
   ;
 </script>
 </body>
+
 
 </html>
