--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!-- Erik Safford
+     Programming Assignment 6: UI Design with Semantic UI
+     CS 320
+     NOV 2018 -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,19 +20,21 @@
 
 <body>
 
+<!-- Top Menubar ------------------------------------------------------------------------------------------------------>
+
 <div class="ui borderless topmenu menu">
 
   <div class="left item tab-left">
-    <a class="fitted item">
+    <a class="fitted item" href="https://www.facebook.com">
       <i class="facebook f icon"></i>
     </a>
-    <a class="fitted item">
+    <a class="fitted item" href="https://www.twitter.com">
       <i class="twitter icon"></i>
     </a>
-    <a class="fitted item">
+    <a class="fitted item" href="https://www.pinterest.com">
       <i class="pinterest icon"></i>
     </a>
-    <a class="fitted item">
+    <a class="fitted item" href="https://www.instagram.com">
       <i class="instagram icon"></i>
     </a>
   </div>
@@ -57,11 +64,144 @@
 
 </div>
 
+<!-- Middle Section --------------------------------------------------------------------------------------------------->
+
+<div class="ui center aligned container">
+
+  <img class="center-coug" src="coug.jpg">
+
+  <div class="ui borderless five item menu middle menu">
+
+    <div class="ui dropdown item">
+      <div class="text">TEXTBOOKS&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">FIND TEXTBOOKS</div>
+        <div class="item">TEXTBOOK RENTALS</div>
+        <div class="item">SELL BACK TEXTBOOKS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">APPAREL&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">MEN</div>
+        <div class="item">WOMEN</div>
+        <div class="item">KIDS</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">GIFTS&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">DIPLOMA FRAMES</div>
+        <div class="item">SCHOOL SPIRIT</div>
+        <div class="item">DRINKWARE</div>
+      </div>
+    </div>
+
+    <div class="ui dropdown item">
+      <div class="text">COLLECTIONS&nbsp;&nbsp;&nbsp;</div>
+      <i class="caret down icon"></i>
+      <div class="menu">
+        <div class="item">UNDER ARMOUR</div>
+        <div class="item">NIKE</div>
+        <div class="item">LOGO GEAR</div>
+      </div>
+    </div>
+
+    <a class="item">SEARCH</a>
+
+  </div>
+</div>
+
+<img class="bg-image" src="centerimage.jpg">
+
+<!-- Footer ----------------------------------------------------------------------------------------------------------->
+
+<div class="black-background footer-padding">
+
+  <div class="grid-padding">
+
+    <div class="ui three column grid">
+
+        <div class="column">
+          <br>
+          <br>
+          <br>
+          <p><b>NAVIGATION</b></p>
+          <hr>
+          <p><a class="white"><b>About Us</b></a></p>
+          <p><a class="white"><b>Videos</b></a></p>
+          <p><a class="white"><b>Store Locations</b></a></p>
+        </div>
+        <div class="column">
+          <br>
+          <br>
+          <br>
+          <p><b>MAIN MENU</b></p>
+          <hr>
+          <p><a class="white"><b>Textbooks</b></a></p>
+          <p><a class="white"><b>Apparel</b></a></p>
+          <p><a class="white"><b>Gifts</b></a></p>
+        </div>
+        <div class="column">
+          <br>
+          <br>
+          <br>
+          <p><b>CONNECT</b></p>
+          <hr>
+          <form class="ui form">
+            <div class="field">
+              <label style="color:#F0F0F0;">Sign up for the latest updates</label>
+              <input type="text" name="first-name" placeholder="Enter email address" style="width: 250px;">
+              <button class="ui button" type="submit">Join</button>
+            </div>
+          </form>
+        </div>
+
+    </div>
+
+    <div class="ui center aligned one column grid">
+      <div class="row">
+        <div class="column">
+          <br>
+          <hr>
+          <br>
+          <div class="center item">
+            <a class="footer-sm" href="https://www.facebook.com">
+              <i class="big facebook f icon"></i>
+            </a>
+            <a class="footer-sm" href="https://www.twitter.com">
+              <i class="big twitter icon"></i>
+            </a>
+            <a class="footer-sm" href="https://www.pinterest.com">
+              <i class="big pinterest icon"></i>
+            </a>
+            <a class="footer-sm" href="https://www.instagram.com">
+              <i class="big instagram icon"></i>
+            </a>
+          </div>
+          <br>
+          <br>
+          <br>
+          <p><b>COPYRIGHT  &copy  2018 WASHINGTON STATE UNIVERSITY VANCOUVER </b></p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
 <script>
   $('.ui.dropdown')
       .dropdown()
   ;
 </script>
+
 </body>
 
 </html>
